# open-aitd

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.full  LICENSE  README.md  build-release.cmd  data.txt  vcpkg.json
libs/: lib-urls.txt
newdata/: add_missed.js  alt_bg.json  animation_links.json
newdata/names/: cvars.comments.json  cvars.json  lifes.json  models.json  objects.json  vars.json
newdata/scripts/: main.lua
newdata/shaders/glsl330/: gamma.fs  mask.fs  mask.vs
newdata/tracks/: 1.json  2.json
oldcmake/: CMakeLists.txt  cmake-run.txt
src/: camera.cpp  camera.hpp  cameraTester.cpp  cameraTester.h  main.cpp  mask_render.h  renderer.h
src/engine/: main.cpp  raylib.h
src/engine/controllers/: anim_action_controller.h  animation_controller.h  camera_renderer.h  common_renderers.h  found_screen.h  freelook_renderer.h  hit_controller.h  inventory_screen.h  life.h  life_controller.h  objrotate_controller.h  physics_controller.h  player_controller.h  save_controller.h  shoot_controller.h  throw_controller.h  tracks_controller.h
src/engine/controllers/life_controller/: life_commands.hpp  life_core.hpp
src/engine/renderers/: base_renderer.h  camera_renderer.h  camera_renderer_old.h  freelook_renderer.h
src/engine/resources/: animation.h  audio.h  backgrounds.h  bounds.h  config.h  data_path.h  missed_anims.h  model.h  models.h  resources.h  screen.h  stages.h  tracks.h
src/engine/screens/: base_menu.h  console_screen.h  found_screen.h  inventory_screen.h  menu_screen.h  options_screen.h  picture_screen.h
src/engine/world/: euler_angles.hpp  game_objects.h  world.h
src/extractor/: anim_linker.cpp  anim_linker.h  background_extractor.cpp  background_extractor.h  body_loader.h  buffer_render.h  extractor.cpp  extractor.h  extractor.hpp  extractor_path.h  floor_extractor.cpp  floor_extractor.h  floor_loader.cpp  floor_loader.h  gltf.cpp  life_extractor.cpp  main_extractor.h  mask_extractor.cpp  mask_extractor.h  mask_renderer.cpp  mask_renderer.h  model_extractor.cpp  model_extractor.h  model_loader.cpp  model_loader.h  my_gltf.cpp  my_gltf.h  objects_extractor.cpp  objects_extractor.h  palette.h  save_png.cpp  save_png.h  vars_extractor.h
src/extractor-cli/: main.cpp
src/extractor/extractors/: background_extractor.h  floor_extractor.h  floor_extractor_2.h  game_objects.h  mask_extractor.h  model_extractor.h  object_extractor.h  skeleton_extractor.h  track_extractor.h  vars_extractor.h
src/extractor/include/: extractor.h
src/extractor/life/: life_extractor.cpp  life_extractor.h  life_optimizer.h  life_structs.h  life_using.h  life_v1.h  life_writer.h  life_writer.hpp
src/extractor/loaders/: anim_loader.cpp  floor_loader.cpp  floor_loader.h  loaders.h  model_loader.cpp  model_loader.h  object_loader.cpp  palette.cpp
src/extractor/music/: common.h  config.h  music-data.cpp  music.cpp  music_extractor.cpp  wavwriter.h
src/extractor/pak/: common.h  config.h  floor.cpp  floor.h  maskgen.cpp  pak.cpp  pak.h
src/extractor/res_using/: anim_using.h  body_using.h  life_using.h
src/extractor/src/: extractor.cpp
src/extractor/src/extractors/: background_extractor.h  floor_extractor_2.h  model_extractor.h  object_extractor.h  skeleton_extractor.h  sound_extractor.h  text_extractor.hpp  track_extractor.h  vars_extractor.hpp
src/extractor/src/life/: life_extractor.h  life_writer.hpp
src/extractor/src/loaders/: anim_loader.cpp  floor_loader.cpp  life_loader.cpp  life_v1.h  loaders.h  model_loader.cpp  object_loader.cpp  palette.cpp
src/extractor/src/music/: music-commands.cpp  music-commands.h  music-data.h  music.h  music_extractor.h  opl3.h
src/extractor/src/pak/: pak.cpp  pak.h  unpack.cpp
src/extractor/src/structs/: game_objects.h  int_types.h  life.h  model.h  room.h  track.h
src/extractor/src/utils/: TriangulatePolygon.h  gltf.cpp  gltf_spheremesh.cpp  my_gltf.h
src/extractor/structs/: animation.h  body.h  camera.h  floor.h  game_objects.h  life.h  model.h  room.h  track.h
src/extractor/utils/: buffer_render.h  gltf.cpp  gltf_cube.cpp  gltf_pipemesh.cpp  gltf_spheremesh.cpp  my_gltf.h  room_matrix.h  save_png.h
src/model-render/: bounds.hpp  model.hpp  model_baked.hpp.txt  model_instance.hpp  model_math.hpp  model_old.hpp
src/model-render-test/: main.cpp
src/names-decode/: name_collection.hpp  name_decoders.hpp
src/not_used/: process_one_script.hpp
src/pak/: common.h  config.h  pak.h  unpack.cpp
src/raylib-cpp/: raylib-cpp.h
src/structures/: camera.h  floor.h  int_types.h  room.h
src/tests/: animation_test.h  cameraTest.cpp  cameraTest.ncpp  legacy_camera.cpp  legacy_camera.h  main.cpp  maskTest.cpp  modelTest.cpp  perspectiveTest.cpp  physics_test.h  posrel_test.h  rlstencil.h  tests.h
src/tests/not_used/: anim_test.h  life_tests.h
src/tests/not_used/anim_linker/: anim_linker.cpp  anim_linker.h
